# nanoHTTP

./: LICENSE  Makefile  README.md  pyproject.toml
src/: enums.py  nanohttp.py  request.py  response.py
